[gd_scene load_steps=3 format=3]

[ext_resource type="Script" path="res://scripts/screens/map_screen.gd" id="1_script"]
[ext_resource type="Texture2D" path="res://assets/ai/characters/player.png" id="2_icon"]

[node name="MapScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_script")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.07, 0.07, 0.1, 1)

[node name="ScrollContainer" type="ScrollContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MapContainer" type="Control" parent="ScrollContainer"]
custom_minimum_size = Vector2(2000, 800)
layout_mode = 2

[node name="PlayerIcon" type="TextureRect" parent="ScrollContainer/MapContainer"]
z_index = 10
custom_minimum_size = Vector2(30, 30)
offset_right = 30.0
offset_bottom = 30.0
texture = ExtResource("2_icon")
expand_mode = 1
stretch_mode = 5

[node name="CloseButton" type="Button" parent="."]
visible = false
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -120.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = 70.0
grow_horizontal = 0
text = "Close Map"

[connection signal="pressed" from="CloseButton" to="." method="_on_close_button_pressed"]